<resources>
    <string name="app_name">AuthenticationApp</string>
    <string name="full_name">Full Name</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="loginWithGoogle">LOGIN WITH GOOGLE</string>
    <string name="register">REGISTER</string>
</resources>